--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
-    "expo": "~51.0.28",
-    "expo-font": "~12.0.10",
-    "expo-image": "~1.13.0",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1"
+    "expo": "^52.0.7",
+    "expo-font": "~13.0.1",
+    "expo-image": "~2.0.0",
+    "expo-status-bar": "~2.0.0",
+    "react": "18.3.1",
+    "react-native": "0.76.2",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
+    "react-navigation": "^5.0.0",
+    "status-bar": "^2.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
