--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-font": "~13.0.1",
     "expo-image": "~2.0.0",
     "expo-status-bar": "~2.0.0",
+    "firebase": "^11.0.2",
     "react": "18.3.1",
     "react-native": "0.76.2",
     "react-native-dropdown-picker": "^5.4.6",
