--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "expo": "^52.0.7",
     "expo-font": "~13.0.1",
     "expo-image": "~2.0.0",
+    "expo-location": "~18.0.2",
     "expo-status-bar": "~2.0.0",
     "firebase": "^11.0.2",
     "react": "18.3.1",
     "react-native": "0.76.2",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-maps": "^1.20.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-navigation": "^5.0.0",
