--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
@@ -21,9 +22,12 @@
     "react": "18.3.1",
     "react-native": "0.76.2",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-gesture-handler": "^2.21.2",
     "react-native-maps": "^1.20.0",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-reanimated": "^3.16.3",
+    "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "~4.1.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-navigation": "^5.0.0",
     "status-bar": "^2.0.3"
   },
