--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase": "^11.0.2",
     "react": "18.3.1",
     "react-native": "0.76.2",
+    "react-native-dialog": "^9.3.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-maps": "^1.20.0",
