--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native": "^0.76.3",
     "react-native-dialog": "^9.3.0",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-maps": "^1.18.0",
     "react-native-reanimated": "^3.16.3",
