시간표 공유 기능 추가+ mapscreen 데이터베이스 객체화 + 창의관, 학식당, 이마트24 사진 추가 + ios 구동 연동 + gps 준완성

--- a/app.json
+++ b/app.json
@@ -12,7 +12,10 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSLocationWhenInUseUsageDescription": "앱이 사용자의 위치에 접근하려면 권한이 필요합니다."
+      }
     },
     "android": {
       "adaptiveIcon": {
