--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^3.4.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
@@ -17,6 +18,7 @@
     "expo-font": "~13.0.1",
     "expo-image": "~2.0.3",
     "expo-location": "~18.0.3",
+    "expo-sharing": "~13.0.0",
     "expo-status-bar": "~2.0.0",
     "firebase": "^11.0.2",
     "firebase-admin": "^13.0.1",
@@ -30,12 +32,15 @@
     "react-native-reanimated": "^3.16.3",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
+    "react-native-share": "^12.0.3",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-view-shot": "^4.0.2",
     "react-navigation": "^5.0.0",
     "status-bar": "^2.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@react-native-community/cli": "^16.0.0"
   },
   "private": true
 }
