--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-reanimated": "^3.16.3",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
+    "react-native-screenshot": "^1.0.0",
     "react-native-share": "^12.0.3",
     "react-native-vector-icons": "^10.2.0",
     "react-native-view-shot": "4.0.2",
